--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@google/generative-ai": "^0.24.1",
     "@supabase/supabase-js": "^2.89.0",
     "@vis.gl/react-google-maps": "^1.7.1",
+    "cheerio": "^1.1.2",
     "framer-motion": "^12.23.26",
     "lucide-react": "^0.562.0",
     "next": "16.1.1",
